# ar_blocks

./: '  .CMakeLists.txt.swo  .gitignore  .rosinstall  CMakeLists.txt  README.md  ]  block.cpp  frames.gv  package.xml  scene.cpp  setup.py
action/: BuildStructure.action
config/: .block_measurements.md.swo  ar_rectifier_parameters.txt  baxter.urdf  frames.gv
include/ar_blocks/: .ARBlocksInterface.h.swo  .Scene.h.swo  ARBlock.h  ARBlockFilter.h  ARBlocksInterface.h  ARBlocksInterface.h~  ARBlocksServerTest.h  ARWorldBuilder.h  Geometry.h  GripperJointUpdater.h  Rectangle.h  Scene.h  Square.h
include/nxr_baxter/: ARWorldBuilder.h
launch/: ar_blocks_environment.launch  ar_blocks_interface.launch  ar_blocks_moveit.launch  ar_blocks_setup.launch  untested_ar_blocks_setup.launch
markers/: MarkerData_20_21.xml
msg/: Block.msg  Layer.msg  Structure.msg
nodes/: .ar_blocks_interface.cpp.swn  .ar_blocks_interface.cpp.swo  ar_blocks_environment.cpp  ar_blocks_interface.cpp  ar_blocks_server_test.cpp  debugger.cpp  gripper_state_translator.cpp  moveit_ar_environment.cpp
scripts/: alvar_rectifier.py
src/: .ARBlocksInterface.cpp.swo  .ARWorldBuilder.cpp.swp  .Scene.cpp.swo  ARBlock.cpp  ARBlockFilter.cpp  ARBlocksInterface.cpp  ARBlocksServerTest.cpp  ARWorldBuilder.cpp  Debugger.cpp  Geometry.cpp  GripperJointUpdater.cpp  Rectangle.cpp  Scene.cpp  Square.cpp
